<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Compose 实验</string>

    <string name="linear_one_one">One,One</string>
    <string name="linear_one_two">One,Two</string>
    <string name="linear_one_three">One,Three</string>
    <string name="linear_one_four">One,Four</string>
    <string name="linear_two_one">Two,One</string>
    <string name="linear_two_two">Two,Two</string>
    <string name="linear_two_three">Two,Three</string>
    <string name="linear_two_four">Two,Four</string>
    <string name="linear_three_one">Three,One</string>
    <string name="linear_three_two">Three,Two</string>
    <string name="linear_three_three">Three,Three</string>
    <string name="linear_three_four">Three,Four</string>
    <string name="linear_four_one">Four,One</string>
    <string name="linear_four_two">Four,Two</string>
    <string name="linear_four_three">Four,Three</string>
    <string name="linear_four_four">Four,Four</string>

    <string name="table_title">Hello TableLayout</string>
    <string name="table_open">Open...</string>
    <string name="table_save">Save...</string>
    <string name="table_save_as">Save As...</string>
    <string name="table_import">X  Import...</string>
    <string name="table_export">X  Export...</string>
    <string name="table_quit">Quit</string>
    <string name="shortcut_open">Ctrl-O</string>
    <string name="shortcut_save">Ctrl-S</string>
    <string name="shortcut_save_as">Ctrl-Shift-S</string>
    <string name="shortcut_export">Ctrl-E</string>

    <string name="calculator_title">ConstraintLayoutTest</string>
    <string name="calculator_input">Input</string>
    <string name="calculator_display">0.0</string>

    <string name="space_stations">Space Stations</string>
    <string name="flights">Flights</string>
    <string name="rovers">Rovers</string>
    <string name="dca">DCA</string>
    <string name="mars">MARS</string>
    <string name="one_way">One Way</string>
    <string name="one_traveller">1 Traveller</string>
    <string name="depart">DEPART</string>

    <string name="content_description_exchange">Exchange</string>
    <string name="content_description_space_station">Space station</string>
    <string name="content_description_rocket">Rocket</string>
    <string name="content_description_rover">Rover</string>
    <string name="content_description_galaxy">Galaxy</string>
</resources>

