<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/linear_cell"
    android:orientation="vertical"
    android:padding="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.95"
            android:background="@drawable/cell_border"
            android:gravity="center"
            android:text="@string/linear_one_one"
            android:textColor="@color/linear_text"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1.75"
            android:background="@drawable/cell_border"
            android:gravity="center"
            android:text="@string/linear_one_two"
            android:textColor="@color/linear_text"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1.15"
            android:background="@drawable/cell_border"
            android:gravity="center"
            android:text="@string/linear_one_three"
            android:textColor="@color/linear_text"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1.15"
            android:background="@drawable/cell_border"
            android:gravity="center"
            android:text="@string/linear_one_four"
            android:textColor="@color/linear_text"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.95"
            android:background="@drawable/cell_border"
            android:gravity="center"
            android:text="@string/linear_two_one"
            android:textColor="@color/linear_text"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1.75"
            android:background="@drawable/cell_border"
            android:gravity="center"
            android:text="@string/linear_two_two"
            android:textColor="@color/linear_text"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1.15"
            android:background="@drawable/cell_border"
            android:gravity="center"
            android:text="@string/linear_two_three"
            android:textColor="@color/linear_text"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1.15"
            android:background="@drawable/cell_border"
            android:gravity="center"
            android:text="@string/linear_two_four"
            android:textColor="@color/linear_text"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.95"
            android:background="@drawable/cell_border"
            android:gravity="center"
            android:text="@string/linear_three_one"
            android:textColor="@color/linear_text"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1.40"
            android:background="@drawable/cell_border"
            android:gravity="center"
            android:text="@string/linear_three_two"
            android:textColor="@color/linear_text"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1.45"
            android:background="@drawable/cell_border"
            android:gravity="center"
            android:text="@string/linear_three_three"
            android:textColor="@color/linear_text"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1.20"
            android:background="@drawable/cell_border"
            android:gravity="center"
            android:text="@string/linear_three_four"
            android:textColor="@color/linear_text"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.95"
            android:background="@drawable/cell_border"
            android:gravity="center"
            android:text="@string/linear_four_one"
            android:textColor="@color/linear_text"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1.65"
            android:background="@drawable/cell_border"
            android:gravity="center"
            android:text="@string/linear_four_two"
            android:textColor="@color/linear_text"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1.40"
            android:background="@drawable/cell_border"
            android:gravity="center"
            android:text="@string/linear_four_three"
            android:textColor="@color/linear_text"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1.15"
            android:background="@drawable/cell_border"
            android:gravity="center"
            android:text="@string/linear_four_four"
            android:textColor="@color/linear_text"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>

